Atempting to solve nav vertical align part 2

--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ footer a{
 
 header ul{
   float: right;
+}
+
+ul {
   margin-top: 2rem;
 }
 
